# project-cchain-climate-downscaling

./: .pre-commit-config.yaml  Makefile  README.md  catalog-info.yml  environment.yml  pyproject.toml  requirements.in  requirements.txt
notebooks/00-download-data/: download_chirts.ipynb  download_chirts.py  download_era5.ipynb  download_era5.py  download_ndvi.ipynb  download_ndvi.py
notebooks/00-download-data/fix_downloads/: convert_era5_grib_to_netcdf.ipynb  convert_era5_grib_to_netcdf.py  get_subset_local_era5_files.ipynb  get_subset_local_era5_files.py
notebooks/01-align-grids/: 00_create_bounds.ipynb  00_create_bounds.py  01_create_grid.ipynb  01_prepare_station.ipynb  01_prepare_station.py  02_align_data.ipynb  02_align_data.py  03_interpolate_data.ipynb  03_interpolate_data.py
notebooks/02-apply-bias-correction/: 00_align_grids.ipynb  01_overlay_station.ipynb  01_overlay_station.py  02_correct_station.ipynb  02_correct_station.py  02a_correct_station.ipynb  02a_correct_station.py  02b_check_stats.ipynb  02b_check_stats.py  02b_patch_station.ipynb  02b_patch_station.py  02c_check_stats.ipynb  02c_check_stats.py  03_relax_borders.ipynb  03_relax_borders.py  03a_relax_borders.ipynb  03a_relax_borders.py  03b_patch_station.ipynb  03b_patch_station.py  04_interpolate_ncr.ipynb  04_interpolate_ncr.py
notebooks/02-create-reference-data/: 01_overlay_station.ipynb  02a_correct_station.ipynb  03a_relax_borders.ipynb  04_interpolate_ncr.ipynb
notebooks/03-downscale-data/: 01_downscale_variable.ipynb  02_bias_correct_downscaled_output.ipynb
notebooks/04-evaluate-output/: 00_plot_domains.ipynb  01_compute_seasonal_error_metrics.ipynb  02_compare_monthly_profiles.ipynb  03_compare_spatial_patterns.ipynb  04_extract_values_per_brgy.ipynb  05_merge_variables_single_table.ipynb
src/: assess_model.py  climate_downscaling_utils.py  downscaling_utils.py
tests/: test_gdal.py
